--- a/src/views/components/Transitions/slide/styles.scss
+++ b/src/views/components/Transitions/slide/styles.scss
@@ -5,7 +5,6 @@ $duration: 1000;
 
 :global {
   .#{$transitionClassName}-exit-active {
-    background-color: #252627;
     :local {
       animation: slideOut #{$duration}ms both ease;
     }
